# eip1962_cpp

./: Cargo.toml  build.rs  make.sh
eip1962go/: Makefile  go.mod  go.sum  lib.go  main.go
eip1962go/api/: api.c  main.go
eip1962go/eip/: api.go  api_test.go  decoder_test.go  playground_test.go
eip1962go/eip/test_vectors/custom/: 320.json
eip1962go/lib/: api_c_test  libeip1962.h
src/: api.rs  lib.rs
