[package]
name = "eth_pairings_go"
version = "0.2.0"
authors = ["Alex Vlasov <alex.m.vlasov@gmail.com>"]
edition = "2018"
description = "EIP1962 implementation in Go"
homepage = "https://github.com/matter-labs/eip1962"
license = "Apache-2.0"
#links = "eip1962"
build = "build.rs"

[build-dependencies]
#cc = { version = "1.0", features = ["parallel"] }
#bindgen = "0.50"

[dev-dependencies]
hex = "*"

[features]
default = []
clang = []
gcc = []
fuzz = []
fuzzing_mode = []